[package]
name = "easyrw"
description = "Easy Read and Write functions in rust, External and Internal."
license = "MIT"
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/crabmiau/easyrw"
edition = "2021"

[lib]
name = "easyrw"
crate-type = ["lib"]

[dependencies]
once_cell = "1.18.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "memoryapi",
    "minwindef",
    "ntdef", 
    "winuser",
    "tlhelp32",
    "psapi", 
    "securitybaseapi",
    "libloaderapi", 
    "synchapi", 
    "wow64apiset",
    "processthreadsapi", 
    "handleapi", 
    "winbase",
    "impl-default",
    "wincon",
]