[package]
name = "easyrw"
description = "Easy Read and Write functions in rust, External and Internal."
license = "MIT"
version = "0.2.1"
readme = "README.md"
repository = "https://github.com/crabmiau/easyrw"
edition = "2021"

[lib]
name = "easyrw"
crate-type = ["lib"]

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "tlhelp32", "memoryapi", "handleapi",  "impl-default"] }